fixed image spacing error

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -66,8 +66,9 @@ div.gallery {
   margin: auto;
   border: 5px solid $ach;
   float: left;
-  width: 180px;
-  padding: 5px;
+	width: 12em;
+	height: 10em;
+	padding: 5px;
 }
 
 div.gallery:hover {
@@ -76,7 +77,7 @@ div.gallery:hover {
 
 div.gallery img {
   width: 100%;
-  height: 150px;
+  height: 5em;
 }
 
 div.desc {
